--- a/admin-blogs.html
+++ b/admin-blogs.html
@@ -237,9 +237,25 @@
             font-family: var(--font-head);
         }
 
-        .stat-card .trend {
+        .stat-card .trend,
+        .stat-card .stat-trend {
             font-size: 0.8rem;
-            color: var(--accent-1);
+            color: #5cb85c;
+            font-weight: 500;
+        }
+
+        .stat-trend {
+            display: inline-flex;
+            align-items: center;
+            gap: 4px;
+        }
+
+        .trend-up {
+            color: #5cb85c !important;
+        }
+
+        .trend-down {
+            color: #ef4444 !important;
         }
 
         .btn-filter {
@@ -356,8 +372,9 @@
         }
     </style>
     <script async crossorigin="anonymous"
-        data-clerk-publishable-key="pk_test_cG9wdWxhci13ZWFzZWwtNTEuY2xlcmsuYWNjb3VudHMuZGV2JA"
+        data-clerk-publishable-key="pk_live_Y2xlcmsuZXZlcnktYWkuY29tJA"
         src="https://cdn.jsdelivr.net/npm/@clerk/clerk-js@latest/dist/clerk.browser.js" type="text/javascript"></script>
+    <link rel="icon" type="image/png" href="https://res.cloudinary.com/dhar8ajns/image/upload/v1772261620/b6e4b2aa-4284-4a0d-9603-4bae72ffb715_gq7kqd.png">
 </head>
 
 <body id="body">
@@ -373,20 +390,17 @@
     <nav class="navbar" id="navbar">
         <div class="nav-inner">
             <a href="index.html" class="logo" id="logo-link">
-                <span class="logo-icon"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"></polygon>
-                    </svg></span>
+                <span class="logo-icon"><img src="https://res.cloudinary.com/dhar8ajns/image/upload/v1772261620/b6e4b2aa-4284-4a0d-9603-4bae72ffb715_gq7kqd.png" alt="EveryAI Logo" class="logo-img"></span>
                 <span class="logo-text">Every<span class="logo-accent">AI</span> <span
                         style="font-size:0.7rem; opacity:0.5; margin-left:4px">ADMIN</span></span>
             </a>
 
             <ul class="nav-links" id="nav-links">
                 <li><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="about.html" class="nav-link">About</a></li>
-                <li><a href="blogs.html" class="nav-link">Blogs</a></li>
-                <li><a href="prompts.html" class="nav-link">Prompts</a></li>
-                <li><a href="index.html" class="nav-link">PartnerShip</a></li>
+                <li><a href="admin.html" class="nav-link">Dashboard</a></li>
+                <li><a href="admin-blogs.html" class="nav-link">Blogs</a></li>
+                <li><a href="admin-prompts.html" class="nav-link">Prompts</a></li>
+                <li><a href="admin-support.html" class="nav-link">Support<span class="msg-badge" id="msg-badge" style="display:none">0</span></a></li>
             </ul>
 
             <div class="nav-actions">
@@ -413,10 +427,12 @@
         <a href="about.html" class="mobile-link">About</a>
         <a href="blogs.html" class="mobile-link">Blogs</a>
         <a href="prompts.html" class="mobile-link">Prompts</a>
-        <a href="index.html" class="mobile-link">PartnerShip</a>
+        <a href="index.html" class="mobile-link">Contact Us</a>
         <div class="dropdown-divider"></div>
         <a href="admin.html" class="mobile-link">Dashboard</a>
         <a href="admin-profile.html" class="mobile-link">Profile</a>
+        <a href="admin-prompts.html" class="mobile-link">Manage Prompts</a>
+
         <button class="btn-primary mobile-cta" onclick="logout()">Logout</button>
     </div>
 
@@ -445,6 +461,25 @@
                     </svg>
                     View Public Blogs
                 </a>
+                <a href="admin-published-blogs.html" class="btn-sm"
+                    style="background: var(--bg-surface); border: 1px solid var(--border); color: var(--text-primary); text-decoration: none; padding: 10px 20px; border-radius: var(--radius-md); font-size: 0.9rem; font-weight: 600; display: flex; align-items: center; gap: 10px; transition: var(--transition); box-shadow: var(--shadow-sm);">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path>
+                        <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path>
+                    </svg>
+                    Published Blogs
+                </a>
+                <a href="admin-support.html" class="btn-sm"
+                    style="background: var(--bg-surface); border: 1px solid var(--border); color: var(--text-primary); text-decoration: none; padding: 10px 20px; border-radius: var(--radius-md); font-size: 0.9rem; font-weight: 600; display: flex; align-items: center; gap: 10px; transition: var(--transition); box-shadow: var(--shadow-sm);">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
+                        <line x1="8" y1="9" x2="16" y2="9"></line>
+                        <line x1="8" y1="13" x2="14" y2="13"></line>
+                    </svg>
+                    Support Messages
+                </a>
             </div>
 
             <!-- Stats -->
@@ -452,12 +487,12 @@
                 <div class="stat-card">
                     <span class="label" id="label-submissions">Total Submissions</span>
                     <span class="value" id="stat-total">0</span>
-                    <span class="trend" id="trend-submissions">↑ 12% from last week</span>
+                    <span class="trend stat-trend trend-up" id="trend-submissions">↑ 0 published today</span>
                 </div>
                 <div class="stat-card">
                     <span class="label" id="label-traffic">Daily Traffic</span>
-                    <span class="value" id="stat-traffic">1.2K</span>
-                    <span class="trend" id="trend-traffic">↑ 5% from yesterday</span>
+                    <span class="value" id="stat-traffic">0</span>
+                    <span class="trend stat-trend trend-up" id="trend-traffic">↑ 0% from previous day</span>
                 </div>
             </div>
 
@@ -544,19 +579,23 @@
         <div class="container">
             <div class="footer-top">
                 <div class="footer-brand">
-                    <a href="index.html" class="logo"><span class="logo-icon"><svg width="24" height="24"
-                                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                                stroke-linecap="round" stroke-linejoin="round">
-                                <polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"></polygon>
-                            </svg></span><span class="logo-text">Every<span class="logo-accent">AI</span></span></a>
+                    <a href="index.html" class="logo"><span class="logo-icon"><img src="https://res.cloudinary.com/dhar8ajns/image/upload/v1772261620/b6e4b2aa-4284-4a0d-9603-4bae72ffb715_gq7kqd.png"
+                                alt="EveryAI Logo" class="logo-img"></span><span class="logo-text">Every<span
+                                class="logo-accent">AI</span></span></a>
                     <p class="footer-tagline">The ultimate directory of AI-powered tools and apps.</p>
                 </div>
                 <div class="footer-links-group">
                     <h4>Directory</h4><a href="index.html#apps">All Tools</a><a href="categories.html">All
-                        Categories</a><a href="submit.html">Submit App</a><a href="admin.html">Admin Dashboard</a>
+                        Categories</a><a href="submit.html">Submit App</a><a href="admin.html" id="admin-dashboard-link"
+                        style="display: none;">Admin Dashboard</a>
                 </div>
                 <div class="footer-links-group">
-                    <h4>Company</h4><a href="about.html">About</a><a href="blogs.html">Blog</a><a href="#">Contact</a>
+                    <h4>Company</h4>
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="blogs.html">Blogs</a>
+                    <a href="prompts.html">Prompts</a>
+                    <a href="contact.html">Contact Us</a>
                 </div>
                 <div class="footer-links-group">
                     <h4>Legal</h4>
@@ -572,19 +611,6 @@
     </footer>
 
     <script type="module" src="admin.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const form = document.getElementById('blog-post-form');
-            if (form) {
-                form.addEventListener('submit', () => {
-                    // Success handling is in admin.js, we just add the flow redirect
-                    setTimeout(() => {
-                        window.location.href = 'blogs.html';
-                    }, 1500);
-                });
-            }
-        });
-    </script>
 </body>
 
 </html>
