--- a/admin-profile.html
+++ b/admin-profile.html
@@ -311,8 +311,9 @@
         }
     </style>
     <script async crossorigin="anonymous"
-        data-clerk-publishable-key="pk_test_cG9wdWxhci13ZWFzZWwtNTEuY2xlcmsuYWNjb3VudHMuZGV2JA"
+        data-clerk-publishable-key="pk_live_Y2xlcmsuZXZlcnktYWkuY29tJA"
         src="https://cdn.jsdelivr.net/npm/@clerk/clerk-js@latest/dist/clerk.browser.js" type="text/javascript"></script>
+    <link rel="icon" type="image/png" href="https://res.cloudinary.com/dhar8ajns/image/upload/v1772261620/b6e4b2aa-4284-4a0d-9603-4bae72ffb715_gq7kqd.png">
 </head>
 
 <body id="body">
@@ -328,10 +329,7 @@
     <nav class="navbar" id="navbar">
         <div class="nav-inner">
             <a href="index.html" class="logo" id="logo-link">
-                <span class="logo-icon"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"></polygon>
-                    </svg></span>
+                <span class="logo-icon"><img src="https://res.cloudinary.com/dhar8ajns/image/upload/v1772261620/b6e4b2aa-4284-4a0d-9603-4bae72ffb715_gq7kqd.png" alt="EveryAI Logo" class="logo-img"></span>
                 <span class="logo-text">Every<span class="logo-accent">AI</span> <span
                         style="font-size:0.7rem; opacity:0.5; margin-left:4px">ADMIN</span></span>
             </a>
@@ -341,7 +339,7 @@
                 <li><a href="about.html" class="nav-link">About</a></li>
                 <li><a href="blogs.html" class="nav-link">Blogs</a></li>
                 <li><a href="prompts.html" class="nav-link">Prompts</a></li>
-                <li><a href="index.html" class="nav-link">PartnerShip</a></li>
+                <li><a href="index.html" class="nav-link">Contact Us</a></li>
             </ul>
 
             <div class="nav-actions">
@@ -518,19 +516,23 @@
         <div class="container">
             <div class="footer-top">
                 <div class="footer-brand">
-                    <a href="index.html" class="logo"><span class="logo-icon"><svg width="24" height="24"
-                                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                                stroke-linecap="round" stroke-linejoin="round">
-                                <polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"></polygon>
-                            </svg></span><span class="logo-text">Every<span class="logo-accent">AI</span></span></a>
+                    <a href="index.html" class="logo"><span class="logo-icon"><img src="https://res.cloudinary.com/dhar8ajns/image/upload/v1772261620/b6e4b2aa-4284-4a0d-9603-4bae72ffb715_gq7kqd.png"
+                                alt="EveryAI Logo" class="logo-img"></span><span class="logo-text">Every<span
+                                class="logo-accent">AI</span></span></a>
                     <p class="footer-tagline">The ultimate directory of AI-powered tools and apps.</p>
                 </div>
                 <div class="footer-links-group">
                     <h4>Directory</h4><a href="index.html#apps">All Tools</a><a href="categories.html">All
-                        Categories</a><a href="submit.html">Submit App</a><a href="admin.html">Admin Dashboard</a>
+                        Categories</a><a href="submit.html">Submit App</a><a href="admin.html" id="admin-dashboard-link"
+                        style="display: none;">Admin Dashboard</a>
                 </div>
                 <div class="footer-links-group">
-                    <h4>Company</h4><a href="about.html">About</a><a href="blogs.html">Blog</a><a href="#">Contact</a>
+                    <h4>Company</h4>
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="blogs.html">Blogs</a>
+                    <a href="prompts.html">Prompts</a>
+                    <a href="contact.html">Contact Us</a>
                 </div>
                 <div class="footer-links-group">
                     <h4>Legal</h4>
