--- a/categories.html
+++ b/categories.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script async crossorigin="anonymous"
-        data-clerk-publishable-key="pk_test_YXdha2UtaHllbmEtNzAuY2xlcmsuYWNjb3VudHMuZGV2JA"
+        data-clerk-publishable-key="pk_live_Y2xlcmsuZXZlcnktYWkuY29tJA"
         src="https://cdn.jsdelivr.net/npm/@clerk/clerk-js@latest/dist/clerk.browser.js" type="text/javascript"></script>
     <style>
         .categories-page {
@@ -145,6 +145,121 @@
             border-color: var(--accent-1);
         }
 
+        /* ── Comparison Table ── */
+        .comparison-section {
+            margin-top: 80px;
+        }
+
+        .comparison-section h2 {
+            font-family: var(--font-head);
+            font-size: 2rem;
+            font-weight: 700;
+            color: var(--text-primary);
+            text-align: center;
+            margin-bottom: 8px;
+            letter-spacing: -0.5px;
+        }
+
+        .comparison-section .section-sub {
+            text-align: center;
+            color: var(--text-secondary);
+            font-size: 1rem;
+            margin-bottom: 36px;
+            opacity: 0.8;
+        }
+
+        .comparison-table-wrap {
+            overflow-x: auto;
+            border-radius: var(--radius-lg);
+            border: 1px solid var(--border);
+            box-shadow: var(--shadow-md);
+        }
+
+        .comparison-table {
+            width: 100%;
+            border-collapse: collapse;
+            font-size: 0.95rem;
+        }
+
+        .comparison-table thead tr {
+            background: linear-gradient(135deg, var(--accent-1) 0%, var(--accent-2, #3b82f6) 100%);
+        }
+
+        .comparison-table thead th {
+            padding: 18px 24px;
+            text-align: left;
+            color: #fff;
+            font-family: var(--font-head);
+            font-size: 1rem;
+            font-weight: 700;
+            letter-spacing: 0.3px;
+        }
+
+        .comparison-table thead th:first-child {
+            border-radius: var(--radius-lg) 0 0 0;
+        }
+
+        .comparison-table thead th:last-child {
+            border-radius: 0 var(--radius-lg) 0 0;
+        }
+
+        .comparison-table tbody tr {
+            border-bottom: 1px solid var(--border);
+            transition: background 0.2s;
+        }
+
+        .comparison-table tbody tr:last-child {
+            border-bottom: none;
+        }
+
+        .comparison-table tbody tr:hover {
+            background: rgba(92, 184, 92, 0.06);
+        }
+
+        .comparison-table tbody td {
+            padding: 16px 24px;
+            vertical-align: top;
+            color: var(--text-primary);
+            line-height: 1.6;
+        }
+
+        .comparison-table tbody td:first-child {
+            font-weight: 700;
+            color: var(--accent-1);
+            white-space: nowrap;
+            background: rgba(92, 184, 92, 0.04);
+        }
+
+        .comparison-table tbody tr:nth-child(even) {
+            background: rgba(255, 255, 255, 0.03);
+        }
+
+        .comparison-table tbody tr:nth-child(even):hover {
+            background: rgba(92, 184, 92, 0.06);
+        }
+
+        body.light .comparison-table tbody tr:nth-child(even) {
+            background: rgba(0, 0, 0, 0.02);
+        }
+
+        body.light .comparison-table tbody tr:hover {
+            background: rgba(92, 184, 92, 0.07);
+        }
+
+        body.light .comparison-table tbody td:first-child {
+            background: rgba(92, 184, 92, 0.05);
+        }
+
+        .col-badge {
+            display: inline-flex;
+            align-items: center;
+            gap: 6px;
+        }
+
+        .col-badge .badge-icon {
+            font-size: 1.1rem;
+        }
+
         @media (max-width: 768px) {
             .categories-header h1 {
                 font-size: 2.5rem;
@@ -157,8 +272,14 @@
             .categories-page {
                 padding-top: 100px;
             }
+
+            .comparison-table tbody td:first-child {
+                white-space: normal;
+            }
         }
     </style>
+    <link rel="icon" type="image/png"
+        href="https://res.cloudinary.com/dhar8ajns/image/upload/v1772261620/b6e4b2aa-4284-4a0d-9603-4bae72ffb715_gq7kqd.png">
 </head>
 
 <body id="body">
@@ -171,7 +292,9 @@
     <nav class="navbar" id="navbar">
         <div class="nav-inner">
             <a href="index.html" class="logo" id="logo-link">
-                <span class="logo-icon">⚡</span>
+                <span class="logo-icon"><img
+                        src="https://res.cloudinary.com/dhar8ajns/image/upload/v1772261620/b6e4b2aa-4284-4a0d-9603-4bae72ffb715_gq7kqd.png"
+                        alt="EveryAI Logo" class="logo-img"></span>
                 <span class="logo-text">Every<span class="logo-accent">AI</span></span>
             </a>
 
@@ -180,7 +303,7 @@
                 <li><a href="about.html" class="nav-link">About</a></li>
                 <li><a href="blogs.html" class="nav-link">Blogs</a></li>
                 <li><a href="prompts.html" class="nav-link">Prompts</a></li>
-                <li><a href="#" class="nav-link">PartnerShip</a></li>
+                <li><a href="contact.html" class="nav-link">Contact Us</a></li>
             </ul>
 
             <div class="nav-actions">
@@ -209,7 +332,7 @@
         <a href="about.html" class="mobile-link">About</a>
         <a href="blogs.html" class="mobile-link">Blogs</a>
         <a href="prompts.html" class="mobile-link">Prompts</a>
-        <a href="#" class="mobile-link">PartnerShip</a>
+        <a href="contact.html" class="mobile-link">Contact Us</a>
         <div id="mobile-user-button"></div>
         <button id="mobile-sign-in-btn" class="mobile-link" style="display: none;">Login</button>
         <a href="submit.html" class="btn-primary mobile-cta">Submit Tool</a>
@@ -325,6 +448,52 @@
                     </div>
                 </div>
             </div>
+
+            <!-- ── AI Apps vs AI Websites Comparison Table ── -->
+            <div class="comparison-section">
+                <h2>AI Apps vs AI Websites</h2>
+                <p class="section-sub">A quick look at how AI-powered apps and websites compare across key dimensions
+                </p>
+
+                <div class="comparison-table-wrap">
+                    <table class="comparison-table">
+                        <thead>
+                            <tr>
+                                <th>Aspect</th>
+                                <th><span class="col-badge"><span class="badge-icon">📱</span> AI Apps</span></th>
+                                <th><span class="col-badge"><span class="badge-icon">🌐</span> AI Websites</span></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>User Interaction</td>
+                                <td>Native and optimized for mobile interactions</td>
+                                <td>Web-based, accessible across different devices and platforms</td>
+                            </tr>
+                            <tr>
+                                <td>Performance</td>
+                                <td>Utilizes hardware features for enhanced performance</td>
+                                <td>Relies on an internet connection and device processing power</td>
+                            </tr>
+                            <tr>
+                                <td>Offline Functionality</td>
+                                <td>Can offer offline functionality, allowing users without internet</td>
+                                <td>Requires internet connection for real-time AI functionalities</td>
+                            </tr>
+                            <tr>
+                                <td>Installation &amp; Updates</td>
+                                <td>Requires installation and manual updates</td>
+                                <td>Accessible without installation, easy updates and maintenance</td>
+                            </tr>
+                            <tr>
+                                <td>Device Compatibility</td>
+                                <td>Optimized for specific mobile platforms</td>
+                                <td>Cross-platform compatibility for various devices and operating systems</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </section>
     </main>
 
@@ -334,14 +503,21 @@
             <div class="footer-top">
                 <div class="footer-brand">
                     <a href="index.html" class="logo">
-                        <span class="logo-icon">⚡</span>
+                        <span class="logo-icon"><img
+                                src="https://res.cloudinary.com/dhar8ajns/image/upload/v1772261620/b6e4b2aa-4284-4a0d-9603-4bae72ffb715_gq7kqd.png"
+                                alt="EveryAI Logo" class="logo-img"></span>
                         <span class="logo-text">Every<span class="logo-accent">AI</span></span>
                     </a>
                     <p class="footer-tagline">The ultimate directory of AI-powered tools and apps.</p>
                     <div class="footer-socials">
-                        <a href="#" class="social-link" aria-label="Twitter">𝕏</a>
-                        <a href="#" class="social-link" aria-label="LinkedIn">in</a>
-                        <a href="#" class="social-link" aria-label="GitHub">⌥</a>
+                        <a href="https://www.linkedin.com/company/every-ai-com/" target="_blank"
+                            class="social-link linkedin" title="Follow us on LinkedIn">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
+                                fill="currentColor">
+                                <path
+                                    d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
+                            </svg>
+                        </a>
                     </div>
                 </div>
 
@@ -350,15 +526,16 @@
                     <a href="index.html#apps">All Tools</a>
                     <a href="categories.html">All Categories</a>
                     <a href="submit.html">Submit App</a>
-                    <a href="admin.html">Admin Dashboard</a>
+                    <a href="admin.html" id="admin-dashboard-link" style="display: none;">Admin Dashboard</a>
                 </div>
 
                 <div class="footer-links-group">
                     <h4>Company</h4>
+                    <a href="index.html">Home</a>
                     <a href="about.html">About</a>
-                    <a href="#">Blog</a>
-                    <a href="#">Press</a>
-                    <a href="#">Contact</a>
+                    <a href="blogs.html">Blogs</a>
+                    <a href="prompts.html">Prompts</a>
+                    <a href="contact.html">Contact Us</a>
                 </div>
 
                 <div class="footer-links-group">
