--- a/index.html
+++ b/index.html
@@ -16,8 +16,31 @@
         rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <script async crossorigin="anonymous"
-        data-clerk-publishable-key="pk_test_YXdha2UtaHllbmEtNzAuY2xlcmsuYWNjb3VudHMuZGV2JA"
+        data-clerk-publishable-key="pk_live_Y2xlcmsuZXZlcnktYWkuY29tJA"
         src="https://cdn.jsdelivr.net/npm/@clerk/clerk-js@latest/dist/clerk.browser.js" type="text/javascript"></script>
+    <link rel="icon" type="image/png"
+        href="https://res.cloudinary.com/dhar8ajns/image/upload/v1772261620/b6e4b2aa-4284-4a0d-9603-4bae72ffb715_gq7kqd.png">
+
+    <!-- 🗲 Ultra-Fast Preloading Script -->
+    <script>
+        (function () {
+            // Restore theme immediately to prevent flash
+            const theme = localStorage.getItem('theme');
+            if (theme === 'light') document.documentElement.classList.add('light');
+
+            // Pre-warm the cache for banners
+            try {
+                const cached = localStorage.getItem('everyai_apps_cache');
+                if (cached) {
+                    const apps = JSON.parse(cached);
+                    // Preload first 3 featured banners
+                    apps.filter(a => a.featured).slice(0, 3).forEach(a => {
+                        if (a.banner) { const i = new Image(); i.src = a.banner; }
+                    });
+                }
+            } catch (e) { }
+        })();
+    </script>
 </head>
 
 <body>
@@ -30,7 +53,9 @@
     <nav class="navbar" id="navbar">
         <div class="nav-inner">
             <a href="#" class="logo" id="logo-link">
-                <span class="logo-icon">⚡</span>
+                <span class="logo-icon"><img
+                        src="https://res.cloudinary.com/dhar8ajns/image/upload/v1772261620/b6e4b2aa-4284-4a0d-9603-4bae72ffb715_gq7kqd.png"
+                        alt="EveryAI Logo" class="logo-img"></span>
                 <span class="logo-text">Every<span class="logo-accent">AI</span></span>
             </a>
 
@@ -39,7 +64,7 @@
                 <li><a href="about.html" class="nav-link">About</a></li>
                 <li><a href="blogs.html" class="nav-link">Blogs</a></li>
                 <li><a href="prompts.html" class="nav-link">Prompts</a></li>
-                <li><a href="#" class="nav-link">PartnerShip</a></li>
+                <li><a href="contact.html" class="nav-link">Contact Us</a></li>
             </ul>
 
             <div class="nav-actions">
@@ -68,7 +93,7 @@
         <a href="about.html" class="mobile-link">About</a>
         <a href="blogs.html" class="mobile-link">Blogs</a>
         <a href="prompts.html" class="mobile-link">Prompts</a>
-        <a href="#" class="mobile-link">PartnerShip</a>
+        <a href="contact.html" class="mobile-link">Contact Us</a>
         <div id="mobile-user-button"></div>
         <button id="mobile-sign-in-btn" class="mobile-link" style="display: none;">Login</button>
         <a href="submit.html" class="btn-primary mobile-cta">Submit Tool</a>
@@ -161,7 +186,7 @@
 
             <div class="hero-stats" id="counters-section">
                 <div class="stat">
-                    <span class="stat-num" data-target="500">0</span><span class="stat-suffix">+</span>
+                    <span class="stat-num" data-target="100">0</span><span class="stat-suffix">+</span>
                     <span class="stat-label">AI Tools</span>
                 </div>
                 <div class="stat-divider"></div>
@@ -200,6 +225,8 @@
                         <label for="sort-select" class="sr-only">Sort by</label>
                         <select id="sort-select" class="sort-select">
                             <option value="popular">Most Popular</option>
+                            <option value="free">Free</option>
+                            <option value="premium">Premium</option>
                             <option value="newest">Newest</option>
                             <option value="name">A–Z</option>
                             <option value="rating">Top Rated</option>
@@ -213,7 +240,7 @@
             </div>
 
             <div class="load-more-wrap">
-                <button class="btn-outline" id="load-more-btn">Load More Apps</button>
+                <!-- Pagination bar will be injected here by app.js -->
             </div>
         </div>
     </section>
@@ -245,14 +272,21 @@
             <div class="footer-top">
                 <div class="footer-brand">
                     <a href="#" class="logo">
-                        <span class="logo-icon">⚡</span>
+                        <span class="logo-icon"><img
+                                src="https://res.cloudinary.com/dhar8ajns/image/upload/v1772261620/b6e4b2aa-4284-4a0d-9603-4bae72ffb715_gq7kqd.png"
+                                alt="EveryAI Logo" class="logo-img"></span>
                         <span class="logo-text">Every<span class="logo-accent">AI</span></span>
                     </a>
                     <p class="footer-tagline">The ultimate directory of AI-powered tools and apps.</p>
                     <div class="footer-socials">
-                        <a href="#" class="social-link" aria-label="Twitter">𝕏</a>
-                        <a href="#" class="social-link" aria-label="LinkedIn">in</a>
-                        <a href="#" class="social-link" aria-label="GitHub">⌥</a>
+                        <a href="https://www.linkedin.com/company/every-ai-com/" target="_blank"
+                            class="social-link linkedin" title="Follow us on LinkedIn">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
+                                fill="currentColor">
+                                <path
+                                    d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
+                            </svg>
+                        </a>
                     </div>
                 </div>
 
@@ -261,15 +295,16 @@
                     <a href="index.html#apps">All Tools</a>
                     <a href="categories.html">All Categories</a>
                     <a href="submit.html">Submit App</a>
-                    <a href="admin.html">Admin Dashboard</a>
+                    <a href="admin.html" id="admin-dashboard-link" style="display: none;">Admin Dashboard</a>
                 </div>
 
                 <div class="footer-links-group">
                     <h4>Company</h4>
+                    <a href="index.html">Home</a>
                     <a href="about.html">About</a>
-                    <a href="#">Blog</a>
-                    <a href="#">Press</a>
-                    <a href="#">Contact</a>
+                    <a href="blogs.html">Blogs</a>
+                    <a href="prompts.html">Prompts</a>
+                    <a href="contact.html">Contact Us</a>
                 </div>
 
                 <div class="footer-links-group">
