--- a/my-tools.html
+++ b/my-tools.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script async crossorigin="anonymous"
-        data-clerk-publishable-key="pk_test_YXdha2UtaHllbmEtNzAuY2xlcmsuYWNjb3VudHMuZGV2JA"
+        data-clerk-publishable-key="pk_live_Y2xlcmsuZXZlcnktYWkuY29tJA"
         src="https://cdn.jsdelivr.net/npm/@clerk/clerk-js@latest/dist/clerk.browser.js" type="text/javascript"></script>
     <style>
         .my-tools-page {
@@ -36,8 +36,19 @@
             font-size: clamp(2rem, 5vw, 3rem);
             color: var(--text-primary);
             font-weight: 800;
-            letter-spacing: -1px;
+            letter-spacing: -1.2px;
             margin-bottom: 12px;
+            display: flex;
+            gap: 12px;
+            justify-content: center;
+        }
+
+        .page-header h1 .title-main {
+            color: var(--text-primary);
+        }
+
+        .page-header h1 .title-accent {
+            color: var(--accent-1);
         }
 
         .page-header p {
@@ -118,13 +129,190 @@
             width: 52px;
             height: 52px;
             border-radius: var(--radius-md);
-            background: rgba(92, 184, 92, 0.08);
-            border: 1px solid rgba(92, 184, 92, 0.15);
+            background: var(--bg-surface);
+            border: 1px solid var(--border);
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 1.5rem;
             flex-shrink: 0;
+            overflow: hidden;
+        }
+
+        .tool-icon-box img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+            padding: 8px;
+        }
+
+        .tool-actions {
+            position: relative;
+            margin-left: 12px;
+        }
+
+        .btn-dots {
+            background: none;
+            border: none;
+            color: var(--text-muted);
+            cursor: pointer;
+            padding: 8px;
+            border-radius: 50%;
+            transition: var(--transition);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.25rem;
+        }
+
+        .btn-dots:hover {
+            background: var(--bg-card);
+            color: var(--text-primary);
+        }
+
+        .actions-dropdown {
+            position: absolute;
+            top: 100%;
+            right: 0;
+            background: var(--bg-surface);
+            border: 1px solid var(--border);
+            border-radius: var(--radius-md);
+            box-shadow: var(--shadow-lg);
+            min-width: 160px;
+            z-index: 100;
+            display: none;
+            padding: 6px;
+            animation: fadeIn 0.2s ease;
+        }
+
+        .actions-dropdown.show {
+            display: block;
+        }
+
+        .dropdown-item {
+            width: 100%;
+            padding: 10px 14px;
+            border: none;
+            background: none;
+            color: var(--text-primary);
+            text-align: left;
+            cursor: pointer;
+            border-radius: var(--radius-sm);
+            font-size: 0.85rem;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            transition: var(--transition);
+        }
+
+        .dropdown-item:hover {
+            background: var(--bg-card);
+        }
+
+        /* Edit Modal */
+        .edit-modal-overlay {
+            position: fixed;
+            inset: 0;
+            background: rgba(0, 0, 0, 0.7);
+            backdrop-filter: blur(8px);
+            z-index: 3000;
+            display: none;
+            align-items: center;
+            justify-content: center;
+            padding: 20px;
+        }
+
+        .edit-modal-overlay.show {
+            display: flex;
+        }
+
+        .edit-modal {
+            background: var(--bg-surface);
+            border: 1px solid var(--border);
+            border-radius: var(--radius-lg);
+            width: 100%;
+            max-width: 600px;
+            max-height: 90vh;
+            overflow-y: auto;
+            position: relative;
+            padding: 40px;
+            box-shadow: var(--shadow-lg);
+            animation: modalScale 0.3s cubic-bezier(0.16, 1, 0.3, 1);
+        }
+
+        @keyframes modalScale {
+            from {
+                opacity: 0;
+                transform: scale(0.95);
+            }
+
+            to {
+                opacity: 1;
+                transform: scale(1);
+            }
+        }
+
+        .modal-close-btn {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            background: none;
+            border: none;
+            color: var(--text-muted);
+            font-size: 1.5rem;
+            cursor: pointer;
+        }
+
+        .edit-form {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
+
+        .edit-form h2 {
+            font-family: var(--font-head);
+            margin-bottom: 24px;
+        }
+
+        .form-field {
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+        }
+
+        .form-field label {
+            font-weight: 600;
+            font-size: 0.9rem;
+        }
+
+        .edit-input {
+            background: var(--bg-base);
+            border: 1px solid var(--border);
+            border-radius: var(--radius-md);
+            padding: 12px 16px;
+            color: var(--text-primary);
+            font-size: 1rem;
+            transition: var(--transition);
+        }
+
+        .edit-input:focus {
+            outline: none;
+            border-color: var(--accent-1);
+        }
+
+        .edit-save-btn {
+            background: var(--accent-1);
+            color: white;
+            border: none;
+            padding: 14px;
+            border-radius: var(--radius-md);
+            font-weight: 700;
+            cursor: pointer;
+            transition: var(--transition);
+            margin-top: 10px;
+        }
+
+        .edit-save-btn:hover {
+            filter: brightness(1.1);
         }
 
         .tool-info {
@@ -273,6 +461,7 @@
             }
         }
     </style>
+    <link rel="icon" type="image/png" href="https://res.cloudinary.com/dhar8ajns/image/upload/v1772261620/b6e4b2aa-4284-4a0d-9603-4bae72ffb715_gq7kqd.png">
 </head>
 
 <body id="body">
@@ -297,7 +486,7 @@
     <nav class="navbar" id="navbar">
         <div class="nav-inner">
             <a href="index.html" class="logo" id="logo-link">
-                <span class="logo-icon">⚡</span>
+                <span class="logo-icon"><img src="https://res.cloudinary.com/dhar8ajns/image/upload/v1772261620/b6e4b2aa-4284-4a0d-9603-4bae72ffb715_gq7kqd.png" alt="EveryAI Logo" class="logo-img"></span>
                 <span class="logo-text">Every<span class="logo-accent">AI</span></span>
             </a>
 
@@ -306,7 +495,7 @@
                 <li><a href="about.html" class="nav-link">About</a></li>
                 <li><a href="blogs.html" class="nav-link">Blogs</a></li>
                 <li><a href="prompts.html" class="nav-link">Prompts</a></li>
-                <li><a href="#" class="nav-link">PartnerShip</a></li>
+                <li><a href="contact.html" class="nav-link">Contact Us</a></li>
             </ul>
 
             <div class="nav-actions">
@@ -335,7 +524,7 @@
         <a href="about.html" class="mobile-link">About</a>
         <a href="blogs.html" class="mobile-link">Blogs</a>
         <a href="prompts.html" class="mobile-link">Prompts</a>
-        <a href="#" class="mobile-link">PartnerShip</a>
+        <a href="contact.html" class="mobile-link">Contact Us</a>
         <div id="mobile-user-button"></div>
         <button id="mobile-sign-in-btn" class="mobile-link" style="display: none;">Login</button>
         <a href="submit.html" class="btn-primary mobile-cta">Submit Tool</a>
@@ -344,7 +533,9 @@
     <main class="my-tools-page">
         <div class="my-tools-container">
             <div class="page-header">
-                <h1>My Submitted Tools</h1>
+                <h1>
+                    <span class="title-main">My Submitted</span><span class="title-accent">Tools</span>
+                </h1>
                 <p>Track the status of all your AI tool submissions</p>
             </div>
 
@@ -356,21 +547,65 @@
         </div>
     </main>
 
+    <!-- Edit Modal -->
+    <div class="edit-modal-overlay" id="editModalOverlay">
+        <div class="edit-modal">
+            <button class="modal-close-btn" id="closeEditModal">✕</button>
+            <form class="edit-form" id="editToolForm">
+                <h2>Edit Tool Details</h2>
+                <input type="hidden" id="edit-id">
+
+                <div class="form-field">
+                    <label>Tool Name</label>
+                    <input type="text" id="edit-name" class="edit-input" required>
+                </div>
+
+                <div class="form-field">
+                    <label>Website URL</label>
+                    <input type="url" id="edit-url" class="edit-input" required>
+                </div>
+
+                <div class="form-field">
+                    <label>Short Description</label>
+                    <textarea id="edit-description" class="edit-input" style="min-height: 80px; resize: vertical;"
+                        required></textarea>
+                </div>
+
+                <div class="form-field">
+                    <label>Features (comma separated)</label>
+                    <textarea id="edit-features" class="edit-input"
+                        style="min-height: 80px; resize: vertical;"></textarea>
+                </div>
+
+                <div class="form-field">
+                    <label>Category</label>
+                    <select id="edit-category" class="edit-input">
+                        <option value="text">Text</option>
+                        <option value="image">Image</option>
+                        <option value="code">Code</option>
+                        <option value="audio">Audio</option>
+                        <option value="video">Video</option>
+                        <option value="business">Business</option>
+                        <option value="3d">3D</option>
+                        <option value="other">Other</option>
+                    </select>
+                </div>
+
+                <button type="submit" class="edit-save-btn" id="saveToolBtn">Save Changes</button>
+            </form>
+        </div>
+    </div>
+
     <!-- ── Footer ── -->
     <footer class="footer">
         <div class="container">
             <div class="footer-top">
                 <div class="footer-brand">
                     <a href="index.html" class="logo">
-                        <span class="logo-icon">⚡</span>
+                        <span class="logo-icon"><img src="https://res.cloudinary.com/dhar8ajns/image/upload/v1772261620/b6e4b2aa-4284-4a0d-9603-4bae72ffb715_gq7kqd.png" alt="EveryAI Logo" class="logo-img"></span>
                         <span class="logo-text">Every<span class="logo-accent">AI</span></span>
                     </a>
                     <p class="footer-tagline">The ultimate directory of AI-powered tools and apps.</p>
-                    <div class="footer-socials">
-                        <a href="#" class="social-link" aria-label="Twitter">𝕏</a>
-                        <a href="#" class="social-link" aria-label="LinkedIn">in</a>
-                        <a href="#" class="social-link" aria-label="GitHub">⌥</a>
-                    </div>
                 </div>
 
                 <div class="footer-links-group">
@@ -378,15 +613,16 @@
                     <a href="index.html#apps">All Tools</a>
                     <a href="categories.html">All Categories</a>
                     <a href="submit.html">Submit App</a>
-                    <a href="admin.html">Admin Dashboard</a>
+                    <a href="admin.html" id="admin-dashboard-link" style="display: none;">Admin Dashboard</a>
                 </div>
 
                 <div class="footer-links-group">
                     <h4>Company</h4>
+                    <a href="index.html">Home</a>
                     <a href="about.html">About</a>
-                    <a href="#">Blog</a>
-                    <a href="#">Press</a>
-                    <a href="#">Contact</a>
+                    <a href="blogs.html">Blogs</a>
+                    <a href="prompts.html">Prompts</a>
+                    <a href="contact.html">Contact Us</a>
                 </div>
 
                 <div class="footer-links-group">
@@ -562,7 +798,10 @@
             `;
         }
 
+        let myToolsData = [];
+
         function renderTools(tools) {
+            myToolsData = tools;
             const container = $('tools-list');
 
             if (tools.length === 0) {
@@ -580,16 +819,21 @@
             }
 
             container.innerHTML = tools.map(tool => {
-                const icon = categoryIcons[tool.category] || '✨';
                 const date = new Date(tool.timestamp).toLocaleDateString('en-US', {
                     year: 'numeric', month: 'short', day: 'numeric'
                 });
                 const categoryLabel = tool.category ? tool.category.charAt(0).toUpperCase() + tool.category.slice(1) : 'Other';
                 const subcategoryLabel = tool.subcategory ? tool.subcategory.replace(/-/g, ' ').replace(/\b\w/g, c => c.toUpperCase()) : '';
 
+                let logo = `https://www.google.com/s2/favicons?sz=128&domain=${new URL(tool.url).hostname}`;
+                const isMagicTeams = tool.name.toLowerCase().includes('magicteams');
+                const isPaid = tool.planType === 'paid' || isMagicTeams;
+
                 return `
-                    <div class="tool-submission-card">
-                        <div class="tool-icon-box">${icon}</div>
+                    <div class="tool-submission-card" data-id="${tool._id}">
+                        <div class="tool-icon-box">
+                            <img src="${logo}" alt="${tool.name} logo" onerror="this.src='data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2280%22>🤖</text></svg>'">
+                        </div>
                         <div class="tool-info">
                             <h3>${tool.name}</h3>
                             <a href="${tool.url}" class="tool-url" target="_blank">${tool.url}</a>
@@ -599,10 +843,44 @@
                             </div>
                         </div>
                         <span class="status-badge ${tool.status}">${tool.status}</span>
+                        ${isPaid ? `
+                            <div class="tool-actions">
+                                <button class="btn-dots" onclick="toggleDropdown(event, '${tool._id}')">⋮</button>
+                                <div class="actions-dropdown" id="dropdown-${tool._id}">
+                                    <a href="edit-tool.html?id=${tool._id}" class="dropdown-item">
+                                        <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path></svg>
+                                        Edit Tool
+                                    </a>
+                                </div>
+                            </div>
+                        ` : `
+                            <div class="tool-actions" title="Editing is locked for Free listings. Upgrade to Featured to edit.">
+                                <div style="color:var(--text-muted); opacity:0.5; font-size:1rem; cursor:help; padding:8px;">
+                                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect><path d="M7 11V7a5 5 0 0 1 10 0v4"></path></svg>
+                                </div>
+                            </div>
+                        `}
                     </div>
                 `;
             }).join('');
         }
+
+        // Global functions for inline onclick
+        window.toggleDropdown = (e, id) => {
+            e.stopPropagation();
+            const allDropdowns = document.querySelectorAll('.actions-dropdown');
+            const target = document.getElementById(`dropdown-${id}`);
+
+            const isShowing = target.classList.contains('show');
+            allDropdowns.forEach(d => d.classList.remove('show'));
+
+            if (!isShowing) target.classList.add('show');
+        };
+
+        // Close dropdowns on outside click
+        document.addEventListener('click', () => {
+            document.querySelectorAll('.actions-dropdown').forEach(d => d.classList.remove('show'));
+        });
 
         // Smooth page transitions
         document.addEventListener('click', (e) => {
