--- a/prompt-generation-guide.html
+++ b/prompt-generation-guide.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script async crossorigin="anonymous"
-        data-clerk-publishable-key="pk_test_YXdha2UtaHllbmEtNzAuY2xlcmsuYWNjb3VudHMuZGV2JA"
+        data-clerk-publishable-key="pk_live_Y2xlcmsuZXZlcnktYWkuY29tJA"
         src="https://cdn.jsdelivr.net/npm/@clerk/clerk-js@latest/dist/clerk.browser.js" type="text/javascript"></script>
     <style>
         .post-page {
@@ -112,6 +112,7 @@
             background: #ffffff;
         }
     </style>
+    <link rel="icon" type="image/png" href="https://res.cloudinary.com/dhar8ajns/image/upload/v1772261620/b6e4b2aa-4284-4a0d-9603-4bae72ffb715_gq7kqd.png">
 </head>
 
 <body id="body">
@@ -119,7 +120,7 @@
     <nav class="navbar" id="navbar">
         <div class="nav-inner">
             <a href="index.html" class="logo" id="logo-link">
-                <span class="logo-icon">⚡</span>
+                <span class="logo-icon"><img src="https://res.cloudinary.com/dhar8ajns/image/upload/v1772261620/b6e4b2aa-4284-4a0d-9603-4bae72ffb715_gq7kqd.png" alt="EveryAI Logo" class="logo-img"></span>
                 <span class="logo-text">Every<span class="logo-accent">AI</span></span>
             </a>
 
@@ -128,7 +129,7 @@
                 <li><a href="about.html" class="nav-link">About</a></li>
                 <li><a href="blogs.html" class="nav-link">Blogs</a></li>
                 <li><a href="prompts.html" class="nav-link">Prompts</a></li>
-                <li><a href="#" class="nav-link">PartnerShip</a></li>
+                <li><a href="contact.html" class="nav-link">Contact Us</a></li>
             </ul>
 
             <div class="nav-actions">
@@ -157,7 +158,7 @@
         <a href="about.html" class="mobile-link">About</a>
         <a href="blogs.html" class="mobile-link">Blogs</a>
         <a href="prompts.html" class="mobile-link">Prompts</a>
-        <a href="#" class="mobile-link">PartnerShip</a>
+        <a href="contact.html" class="mobile-link">Contact Us</a>
         <div id="mobile-user-button"></div>
         <button id="mobile-sign-in-btn" class="mobile-link" style="display: none;">Login</button>
         <a href="submit.html" class="btn-primary mobile-cta">Submit Tool</a>
@@ -203,15 +204,10 @@
             <div class="footer-top">
                 <div class="footer-brand">
                     <a href="index.html" class="logo">
-                        <span class="logo-icon">⚡</span>
+                        <span class="logo-icon"><img src="https://res.cloudinary.com/dhar8ajns/image/upload/v1772261620/b6e4b2aa-4284-4a0d-9603-4bae72ffb715_gq7kqd.png" alt="EveryAI Logo" class="logo-img"></span>
                         <span class="logo-text">Every<span class="logo-accent">AI</span></span>
                     </a>
                     <p class="footer-tagline">The ultimate directory of AI-powered tools and apps.</p>
-                    <div class="footer-socials">
-                        <a href="#" class="social-link" aria-label="Twitter">𝕏</a>
-                        <a href="#" class="social-link" aria-label="LinkedIn">in</a>
-                        <a href="#" class="social-link" aria-label="GitHub">⌥</a>
-                    </div>
                 </div>
 
                 <div class="footer-links-group">
@@ -219,15 +215,16 @@
                     <a href="index.html#apps">All Tools</a>
                     <a href="categories.html">All Categories</a>
                     <a href="submit.html">Submit App</a>
-                    <a href="admin.html">Admin Dashboard</a>
+                    <a href="admin.html" id="admin-dashboard-link" style="display: none;">Admin Dashboard</a>
                 </div>
 
                 <div class="footer-links-group">
                     <h4>Company</h4>
+                    <a href="index.html">Home</a>
                     <a href="about.html">About</a>
-                    <a href="#">Blog</a>
-                    <a href="#">Press</a>
-                    <a href="#">Contact</a>
+                    <a href="blogs.html">Blogs</a>
+                    <a href="prompts.html">Prompts</a>
+                    <a href="contact.html">Contact Us</a>
                 </div>
 
                 <div class="footer-links-group">
