--- a/prompts.html
+++ b/prompts.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Popular Prompts | EveryAI</title>
+    <title>AI Prompts | EveryAI</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -12,7 +12,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script async crossorigin="anonymous"
-        data-clerk-publishable-key="pk_test_YXdha2UtaHllbmEtNzAuY2xlcmsuYWNjb3VudHMuZGV2JA"
+        data-clerk-publishable-key="pk_live_Y2xlcmsuZXZlcnktYWkuY29tJA"
         src="https://cdn.jsdelivr.net/npm/@clerk/clerk-js@latest/dist/clerk.browser.js" type="text/javascript"></script>
     <style>
         .prompts-page {
@@ -42,30 +42,32 @@
 
         .prompts-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-            gap: 24px;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 20px;
             margin-bottom: 80px;
         }
 
         .prompt-card {
             position: relative;
-            border-radius: var(--radius-lg);
+            border-radius: 16px;
             overflow: hidden;
-            aspect-ratio: 3/4;
+            height: 400px;
             display: flex;
             align-items: flex-end;
-            padding: 24px;
+            padding: 20px;
             text-decoration: none;
-            transition: var(--transition);
-            background-color: var(--bg-surface);
-            border: 1px solid var(--border);
+            cursor: pointer;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            background-color: #1a1a2e;
+            border: none;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.35);
         }
 
         .prompt-card::before {
             content: '';
             position: absolute;
             inset: 0;
-            background: linear-gradient(to top, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.2) 60%, rgba(0, 0, 0, 0) 100%);
+            background: linear-gradient(to top, rgba(0, 0, 0, 0.85) 0%, rgba(0, 0, 0, 0.3) 55%, rgba(0, 0, 0, 0.05) 100%);
             z-index: 1;
         }
 
@@ -75,18 +77,18 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            background: #000;
             z-index: 0;
             transition: transform 0.5s ease;
         }
 
         .prompt-card:hover img {
-            transform: scale(1.05);
+            transform: scale(1.06);
         }
 
         .prompt-card:hover {
-            box-shadow: var(--shadow-xl);
-            transform: translateY(-4px);
-            border-color: rgba(92, 184, 92, 0.4);
+            box-shadow: 0 16px 48px rgba(0, 0, 0, 0.5);
+            transform: translateY(-5px);
         }
 
         .prompt-card h3 {
@@ -94,10 +96,35 @@
             z-index: 2;
             color: #ffffff;
             font-family: var(--font-head);
-            font-size: 1.5rem;
+            font-size: 1.4rem;
             font-weight: 700;
-            line-height: 1.2;
-            text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+            line-height: 1.25;
+            text-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
+            margin: 0 0 8px 0;
+            transition: transform 0.3s ease;
+        }
+
+        .prompt-card-content {
+            position: relative;
+            z-index: 2;
+            width: 100%;
+            transition: transform 0.3s ease;
+        }
+
+        .prompt-card:hover .prompt-card-content {
+            transform: translateY(-5px);
+        }
+
+        @media (max-width: 1024px) {
+            .prompts-grid {
+                grid-template-columns: repeat(3, 1fr);
+            }
+        }
+
+        @media (max-width: 700px) {
+            .prompts-grid {
+                grid-template-columns: repeat(2, 1fr);
+            }
         }
 
         .categories-grid-smaller {
@@ -176,6 +203,8 @@
             }
         }
     </style>
+    <link rel="icon" type="image/png"
+        href="https://res.cloudinary.com/dhar8ajns/image/upload/v1772261620/b6e4b2aa-4284-4a0d-9603-4bae72ffb715_gq7kqd.png">
 </head>
 
 <body id="body">
@@ -188,7 +217,9 @@
     <nav class="navbar" id="navbar">
         <div class="nav-inner">
             <a href="index.html" class="logo" id="logo-link">
-                <span class="logo-icon">⚡</span>
+                <span class="logo-icon"><img
+                        src="https://res.cloudinary.com/dhar8ajns/image/upload/v1772261620/b6e4b2aa-4284-4a0d-9603-4bae72ffb715_gq7kqd.png"
+                        alt="EveryAI Logo" class="logo-img"></span>
                 <span class="logo-text">Every<span class="logo-accent">AI</span></span>
             </a>
 
@@ -197,7 +228,7 @@
                 <li><a href="about.html" class="nav-link">About</a></li>
                 <li><a href="blogs.html" class="nav-link">Blogs</a></li>
                 <li><a href="prompts.html" class="nav-link active">Prompts</a></li>
-                <li><a href="#" class="nav-link">PartnerShip</a></li>
+                <li><a href="contact.html" class="nav-link">Contact Us</a></li>
             </ul>
 
             <div class="nav-actions">
@@ -226,7 +257,7 @@
         <a href="about.html" class="mobile-link">About</a>
         <a href="blogs.html" class="mobile-link">Blogs</a>
         <a href="prompts.html" class="mobile-link active">Prompts</a>
-        <a href="#" class="mobile-link">PartnerShip</a>
+        <a href="contact.html" class="mobile-link">Contact Us</a>
         <div id="mobile-user-button"></div>
         <button id="mobile-sign-in-btn" class="mobile-link" style="display: none;">Login</button>
         <a href="submit.html" class="btn-primary mobile-cta">Submit Tool</a>
@@ -234,59 +265,61 @@
 
     <main class="prompts-page">
         <section class="prompts-container">
-            <div class="section-header">
-                <h1>Popular Prompts</h1>
+            <div class="prompts-header-grid"
+                style="display: grid; grid-template-columns: 1fr auto 1fr; align-items: center; gap: 30px; margin-bottom: 40px;">
+                <!-- Left Spacer (Hidden but maintains center balance) -->
+                <div class="header-spacer" style="display: block; visibility: hidden; flex: 1;">Spacer</div>
+
+                <!-- Centered Title -->
+                <h1
+                    style="font-size: 5rem; font-weight: 800; font-family: var(--font-head); letter-spacing: -3px; margin: 0; text-align: center; white-space: nowrap; line-height: 1.1;">
+                    <span style="color: var(--text-primary);">AI</span>
+                    <span style="color: var(--accent-1);">Prompts</span>
+                </h1>
+
+                <!-- Right Search Bar -->
+                <div class="prompt-search-wrap" style="justify-self: end; width: 100%; max-width: 220px;">
+                    <div class="search-box"
+                        style="margin: 0; width: 100%; max-width: none; padding: 4px 4px 4px 14px; border-radius: var(--radius-full);">
+                        <span class="search-icon" style="opacity: 0.6;">
+                            <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+                                <circle cx="11" cy="11" r="8" />
+                                <path d="m21 21-4.3-4.3" />
+                            </svg>
+                        </span>
+                        <input type="text" id="prompts-search" class="search-input" placeholder="Search..."
+                            oninput="filterPrompts(this.value)" style="font-size: 0.85rem; font-weight: 500;">
+                    </div>
+                </div>
+            </div>
+            <p
+                style="color: var(--text-secondary); font-size: 1.1rem; max-width: 800px; margin: 0 auto 60px; text-align: center;">
+                Expertly
+                crafted prompts to get the most out of your favorite AI tools.</p>
+
+            <style>
+                @media (max-width: 900px) {
+                    .prompts-header-grid {
+                        grid-template-columns: 1fr;
+                        gap: 20px;
+                    }
+
+                    .header-spacer {
+                        display: none !important;
+                    }
+
+                    .prompt-search-wrap {
+                        justify-self: center !important;
+                        max-width: 400px !important;
+                    }
+                }
+            </style>
+
+            <div class="prompts-grid" id="dynamic-prompts-list">
+                <!-- Dynamic prompts will be loaded here -->
             </div>
 
-            <div class="prompts-grid">
-                <a href="prompt-generation-guide.html" class="prompt-card">
-                    <img src="https://images.unsplash.com/photo-1499750310107-5fef28a66643?auto=format&fit=crop&q=80&w=800"
-                        alt="Prompt Generation Guide">
-                    <h3>Prompt<br>Generation<br>Guide</h3>
-                </a>
-                <a href="#" class="prompt-card">
-                    <img src="https://images.unsplash.com/photo-1518020382113-a7e8fc38eac9?auto=format&fit=crop&q=80&w=800"
-                        alt="350+ Expert Copywriting Prompts">
-                    <h3>350+ Expert<br>Copywriting<br>Prompts</h3>
-                </a>
-                <a href="#" class="prompt-card">
-                    <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&q=80&w=800"
-                        alt="157 Act as prompts">
-                    <h3>157 – "Act as"<br>prompts</h3>
-                </a>
-                <a href="#" class="prompt-card">
-                    <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&q=80&w=800"
-                        alt="SaaS 101 - 500 ChatGPT Prompts">
-                    <h3>SaaS 101 –<br>500 ChatGPT<br>Prompts</h3>
-                </a>
-            </div>
-
-            <div class="section-header">
-                <h1>Prompt Categories</h1>
-            </div>
-
-            <div class="categories-grid-smaller">
-                <a href="index.html?filter=copywriting" class="category-image-card">
-                    <img src="https://images.unsplash.com/photo-1455390582262-044cdead2708?auto=format&fit=crop&q=80&w=800"
-                        alt="Copywriting">
-                    <h3>Copywriting</h3>
-                </a>
-                <a href="index.html?filter=email-assistant" class="category-image-card">
-                    <img src="https://images.unsplash.com/photo-1557200134-90327ee9fafa?auto=format&fit=crop&q=80&w=800"
-                        alt="Email Assistant">
-                    <h3>Email Assistant</h3>
-                </a>
-                <a href="index.html?filter=marketing" class="category-image-card">
-                    <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?auto=format&fit=crop&q=80&w=800"
-                        alt="Marketing">
-                    <h3>Marketing</h3>
-                </a>
-                <a href="index.html?filter=seo" class="category-image-card">
-                    <img src="https://images.unsplash.com/photo-1572177812156-58036aae439c?auto=format&fit=crop&q=80&w=800"
-                        alt="SEO">
-                    <h3>SEO</h3>
-                </a>
-            </div>
 
         </section>
     </main>
@@ -297,14 +330,21 @@
             <div class="footer-top">
                 <div class="footer-brand">
                     <a href="index.html" class="logo">
-                        <span class="logo-icon">⚡</span>
+                        <span class="logo-icon"><img
+                                src="https://res.cloudinary.com/dhar8ajns/image/upload/v1772261620/b6e4b2aa-4284-4a0d-9603-4bae72ffb715_gq7kqd.png"
+                                alt="EveryAI Logo" class="logo-img"></span>
                         <span class="logo-text">Every<span class="logo-accent">AI</span></span>
                     </a>
                     <p class="footer-tagline">The ultimate directory of AI-powered tools and apps.</p>
                     <div class="footer-socials">
-                        <a href="#" class="social-link" aria-label="Twitter">𝕏</a>
-                        <a href="#" class="social-link" aria-label="LinkedIn">in</a>
-                        <a href="#" class="social-link" aria-label="GitHub">⌥</a>
+                        <a href="https://www.linkedin.com/company/every-ai-com/" target="_blank"
+                            class="social-link linkedin" title="Follow us on LinkedIn">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
+                                fill="currentColor">
+                                <path
+                                    d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
+                            </svg>
+                        </a>
                     </div>
                 </div>
 
@@ -313,15 +353,16 @@
                     <a href="index.html#apps">All Tools</a>
                     <a href="categories.html">All Categories</a>
                     <a href="submit.html">Submit App</a>
-                    <a href="admin.html">Admin Dashboard</a>
+                    <a href="admin.html" id="admin-dashboard-link" style="display: none;">Admin Dashboard</a>
                 </div>
 
                 <div class="footer-links-group">
                     <h4>Company</h4>
+                    <a href="index.html">Home</a>
                     <a href="about.html">About</a>
-                    <a href="#">Blog</a>
-                    <a href="#">Press</a>
-                    <a href="#">Contact</a>
+                    <a href="blogs.html">Blogs</a>
+                    <a href="prompts.html">Prompts</a>
+                    <a href="contact.html">Contact Us</a>
                 </div>
 
                 <div class="footer-links-group">
