--- a/submit.html
+++ b/submit.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script async crossorigin="anonymous"
-        data-clerk-publishable-key="pk_test_YXdha2UtaHllbmEtNzAuY2xlcmsuYWNjb3VudHMuZGV2JA"
+        data-clerk-publishable-key="pk_live_Y2xlcmsuZXZlcnktYWkuY29tJA"
         src="https://cdn.jsdelivr.net/npm/@clerk/clerk-js@latest/dist/clerk.browser.js" type="text/javascript"></script>
     <style>
         :root {
@@ -265,6 +265,138 @@
             box-shadow: 0 6px 20px rgba(92, 184, 92, 0.4);
         }
 
+        /* ── Plan Selection ── */
+        .plan-selection {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 20px;
+            margin-top: 10px;
+        }
+
+        .plan-card {
+            border: 1px solid var(--border);
+            border-radius: var(--radius-md);
+            padding: 24px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            position: relative;
+            background: rgba(255, 255, 255, 0.01);
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+        }
+
+        .plan-card:hover {
+            border-color: var(--accent-1);
+            background: rgba(255, 255, 255, 0.03);
+            transform: translateY(-4px);
+        }
+
+        .plan-card.active {
+            border-color: var(--accent-1);
+            background: rgba(92, 184, 92, 0.05);
+            box-shadow: 0 0 20px rgba(92, 184, 92, 0.1);
+        }
+
+        .plan-card.active::after {
+            content: "✓";
+            position: absolute;
+            top: 12px;
+            right: 12px;
+            background: var(--accent-1);
+            color: white;
+            width: 22px;
+            height: 22px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 0.8rem;
+            font-weight: 800;
+        }
+
+        .plan-badge {
+            font-size: 0.7rem;
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
+            font-weight: 700;
+            padding: 4px 8px;
+            border-radius: 4px;
+            width: fit-content;
+        }
+
+        .badge-free {
+            background: var(--border);
+            color: var(--text-secondary);
+        }
+
+        .badge-paid {
+            background: var(--accent-1);
+            color: white;
+        }
+
+        .plan-price {
+            font-size: 1.5rem;
+            font-weight: 800;
+            font-family: var(--font-head);
+        }
+
+        .plan-name {
+            font-size: 1.1rem;
+            font-weight: 700;
+            color: var(--text-primary);
+        }
+
+        .plan-features {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+        }
+
+        .plan-features li {
+            font-size: 0.85rem;
+            color: var(--text-secondary);
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+
+        .plan-features li::before {
+            content: "→";
+            color: var(--accent-1);
+            font-weight: bold;
+        }
+
+        .plan-card input {
+            display: none;
+        }
+
+        #paid-info-section {
+            display: none;
+            animation: fadeIn 0.3s ease;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(10px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @media (max-width: 600px) {
+            .plan-selection {
+                grid-template-columns: 1fr;
+            }
+        }
+
         @media (max-width: 680px) {
             .form-header h1 {
                 font-size: 1.8rem;
@@ -279,6 +411,8 @@
             }
         }
     </style>
+    <link rel="icon" type="image/png"
+        href="https://res.cloudinary.com/dhar8ajns/image/upload/v1772261620/b6e4b2aa-4284-4a0d-9603-4bae72ffb715_gq7kqd.png">
 </head>
 
 <body id="body">
@@ -291,7 +425,9 @@
     <nav class="navbar" id="navbar">
         <div class="nav-inner">
             <a href="index.html" class="logo" id="logo-link">
-                <span class="logo-icon">⚡</span>
+                <span class="logo-icon"><img
+                        src="https://res.cloudinary.com/dhar8ajns/image/upload/v1772261620/b6e4b2aa-4284-4a0d-9603-4bae72ffb715_gq7kqd.png"
+                        alt="EveryAI Logo" class="logo-img"></span>
                 <span class="logo-text">Every<span class="logo-accent">AI</span></span>
             </a>
 
@@ -300,7 +436,7 @@
                 <li><a href="about.html" class="nav-link">About</a></li>
                 <li><a href="blogs.html" class="nav-link">Blogs</a></li>
                 <li><a href="prompts.html" class="nav-link">Prompts</a></li>
-                <li><a href="#" class="nav-link">PartnerShip</a></li>
+                <li><a href="contact.html" class="nav-link">Contact Us</a></li>
             </ul>
 
             <div class="nav-actions">
@@ -329,7 +465,7 @@
         <a href="about.html" class="mobile-link">About</a>
         <a href="blogs.html" class="mobile-link">Blogs</a>
         <a href="prompts.html" class="mobile-link">Prompts</a>
-        <a href="#" class="mobile-link">PartnerShip</a>
+        <a href="contact.html" class="mobile-link">Contact Us</a>
         <div id="mobile-user-button"></div>
         <button id="mobile-sign-in-btn" class="mobile-link" style="display: none;">Login</button>
         <a href="submit.html" class="btn-primary mobile-cta">Submit Tool</a>
@@ -342,6 +478,45 @@
 
         <div class="form-container">
             <form id="submissionForm" action="#" method="POST" class="unified-form-box">
+                <!-- Plan Selection -->
+                <div class="form-section">
+                    <label class="field-label">Choose Your Listing Plan <span>*</span></label>
+                    <div class="plan-selection">
+                        <!-- Free Plan -->
+                        <label class="plan-card active" id="plan-free-card">
+                            <input type="radio" name="plan" value="free" checked required>
+                            <span class="plan-badge badge-free">Standard</span>
+                            <div class="plan-price">$0</div>
+                            <div class="plan-name">Free Listing</div>
+                            <ul class="plan-features">
+                                <li>Review: 48-72 hours</li>
+                                <li>Standard chronological ranking</li>
+                                <li>Standard no-follow backlink</li>
+                                <li style="color:#ef4444; font-weight:600">No edits after submission</li>
+                            </ul>
+                        </label>
+
+                        <!-- Paid Plan -->
+                        <label class="plan-card" id="plan-paid-card">
+                            <input type="radio" name="plan" value="paid">
+                            <span class="plan-badge badge-paid">Recommended</span>
+                            <div class="plan-price">$19</div>
+                            <div class="plan-name">Featured Listing</div>
+                            <ul class="plan-features">
+                                <li>Review: 24h Express</li>
+                                <li><strong>Priority Ranking (Pinned to Top)</strong></li>
+                                <li><strong>Edit tool details anytime</strong></li>
+                                <li><strong>Premium Badge & Ribbon styling</strong></li>
+                                <li><strong>Do-follow backlink (SEO Benefit)</strong></li>
+                                <li>Featured on Homepage section</li>
+                                <li><strong>Dedicated blog post about your tool</strong></li>
+                            </ul>
+                        </label>
+                    </div>
+                </div>
+
+
+
                 <!-- Tool Name -->
                 <div class="form-section">
                     <label class="field-label">Tool Name <span>*</span></label>
@@ -392,47 +567,10 @@
                     </select>
                 </div>
 
-                <!-- Partnership -->
-                <div class="form-section">
-                    <label class="field-label">Are you interested for a partnership with mention in news letter, podcast
-                        and custom made blog posts? <span>*</span></label>
-                    <div class="radio-group">
-                        <label class="radio-option">
-                            <input type="radio" name="partnership" value="yes" required>
-                            <span class="radio-check"></span>
-                            <span>Yes, I'm interested</span>
-                        </label>
-                        <label class="radio-option">
-                            <input type="radio" name="partnership" value="no">
-                            <span class="radio-check"></span>
-                            <span>No, just a free listing</span>
-                        </label>
-                    </div>
-                </div>
-
-                <!-- Info Box -->
-                <div class="info-box">
-                    <p class="info-text">
-                        If yes, awesome! To keep it fair, we are keeping a nominal fee of <strong>$19</strong> for all
-                        support features.<br><br>
-                        <strong>Next steps:</strong><br>
-                        1. Share the transaction ID after payment<br>
-                        2. Your app will be listed within 24 hours<br>
-                        <a href="https://bit.ly/everyai" target="_blank">Pay and Get Featured Here</a>
-                    </p>
-                </div>
-
-                <!-- Transaction ID -->
-                <div class="form-section">
-                    <label class="field-label">Share your transaction id for 24 hour listing <span>*</span></label>
-                    <input type="text" id="transactionId" class="input-field"
-                        placeholder="Enter ID if opting for featured listing" value="demo">
-                </div>
-
                 <!-- Email -->
                 <div class="form-section">
-                    <label class="field-label">Contact Email <span>*</span></label>
-                    <input type="email" class="input-field" placeholder="you@example.com" required>
+                    <label class="field-label">Contact Email</label>
+                    <input type="email" class="input-field" placeholder="you@example.com">
                 </div>
 
                 <!-- Phone Number -->
@@ -443,8 +581,8 @@
 
                 <!-- Socials -->
                 <div class="form-section">
-                    <label class="field-label">LinkedIn/Twitter Profile <span>*</span></label>
-                    <input type="text" class="input-field" placeholder="https://twitter.com/username" required>
+                    <label class="field-label">LinkedIn/Twitter Profile</label>
+                    <input type="text" class="input-field" placeholder="https://twitter.com/username">
                 </div>
 
                 <button type="submit" class="submit-btn" id="finalSubmitBtn">Submit Tool</button>
@@ -458,14 +596,21 @@
             <div class="footer-top">
                 <div class="footer-brand">
                     <a href="index.html" class="logo">
-                        <span class="logo-icon">⚡</span>
+                        <span class="logo-icon"><img
+                                src="https://res.cloudinary.com/dhar8ajns/image/upload/v1772261620/b6e4b2aa-4284-4a0d-9603-4bae72ffb715_gq7kqd.png"
+                                alt="EveryAI Logo" class="logo-img"></span>
                         <span class="logo-text">Every<span class="logo-accent">AI</span></span>
                     </a>
                     <p class="footer-tagline">The ultimate directory of AI-powered tools and apps.</p>
                     <div class="footer-socials">
-                        <a href="#" class="social-link" aria-label="Twitter">𝕏</a>
-                        <a href="#" class="social-link" aria-label="LinkedIn">in</a>
-                        <a href="#" class="social-link" aria-label="GitHub">⌥</a>
+                        <a href="https://www.linkedin.com/company/every-ai-com/" target="_blank"
+                            class="social-link linkedin" title="Follow us on LinkedIn">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
+                                fill="currentColor">
+                                <path
+                                    d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
+                            </svg>
+                        </a>
                     </div>
                 </div>
 
@@ -474,15 +619,16 @@
                     <a href="index.html#apps">All Tools</a>
                     <a href="categories.html">All Categories</a>
                     <a href="submit.html">Submit App</a>
-                    <a href="admin.html">Admin Dashboard</a>
+                    <a href="admin.html" id="admin-dashboard-link" style="display: none;">Admin Dashboard</a>
                 </div>
 
                 <div class="footer-links-group">
                     <h4>Company</h4>
+                    <a href="index.html">Home</a>
                     <a href="about.html">About</a>
-                    <a href="#">Blog</a>
-                    <a href="#">Press</a>
-                    <a href="#">Contact</a>
+                    <a href="blogs.html">Blogs</a>
+                    <a href="prompts.html">Prompts</a>
+                    <a href="contact.html">Contact Us</a>
                 </div>
 
                 <div class="footer-links-group">
@@ -506,6 +652,20 @@
         const getEl = id => document.getElementById(id);
 
 
+        // ── Handle Payment Success Return ─────────────────────────────────
+        window.addEventListener('load', () => {
+            const params = new URLSearchParams(window.location.search);
+            if (params.get('payment') === 'done') {
+                const btn = document.getElementById('finalSubmitBtn');
+                btn.innerText = '🎉 Payment Received & Tool Submitted!';
+                btn.style.backgroundColor = '#10b981';
+                btn.disabled = true;
+
+                // Optional: Scroll to the button
+                btn.scrollIntoView({ behavior: 'smooth', block: 'center' });
+            }
+        });
+
         // Form Submission
         document.getElementById('submissionForm').addEventListener('submit', async (e) => {
             e.preventDefault();
@@ -518,18 +678,23 @@
 
             try {
                 // Prepare form data for Convex
+                const selectedPlan = e.target.querySelector('input[name="plan"]:checked').value;
+                let rawUrl = e.target.querySelector('input[type="url"]').value;
+                if (!rawUrl.includes('ref=Every-Ai')) {
+                    rawUrl += (rawUrl.includes('?') ? '&' : '?') + 'ref=Every-Ai';
+                }
+
                 const formData = {
                     status: 'pending',
                     timestamp: new Date().toISOString(),
                     userId: window.Clerk?.user?.id || 'anonymous',
                     name: e.target.querySelector('input[placeholder*="ChatGPT"]').value,
-                    url: e.target.querySelector('input[type="url"]').value,
+                    url: rawUrl,
                     description: e.target.querySelector('textarea[placeholder*="one sentence"]').value,
                     features: e.target.querySelector('textarea[placeholder*="Key features"]').value,
                     category: getEl('categorySelect').value,
                     subcategory: getEl('subcategorySelect').value,
-                    partnership: e.target.querySelector('input[name="partnership"]:checked').value,
-                    transactionId: getEl('transactionId').value || undefined,
+                    planType: selectedPlan,
                     email: e.target.querySelector('input[type="email"]').value,
                     phone: e.target.querySelector('input[type="tel"]').value || undefined,
                     social: e.target.querySelector('input[placeholder*="twitter"]').value || undefined
@@ -541,14 +706,24 @@
                 // Save to Convex DB
                 await convex.mutation("tools:createTool", formData);
 
-                // Show success natively inside the button instead of annoying popup
+                if (selectedPlan === 'paid') {
+                    // Navigate to Payment Link
+                    // Append success_url if supported, assuming it can redirect back
+                    const basePaymentUrl = "https://pay.xpaycheckout.com/link/FlD4CJod";
+                    const returnUrl = window.location.origin + window.location.pathname + "?payment=done";
+                    // For static links, we just navigate. If it supports params, we add them.
+                    window.location.href = basePaymentUrl;
+                    return; // Prevent redirecting to index.html immediately
+                }
+
+                // Show success natively inside the button for free listings
                 submitBtn.innerText = '🎉 Tool Submitted Successfully!';
                 submitBtn.style.backgroundColor = '#10b981'; // Success green
                 submitBtn.style.color = '#fff';
 
                 setTimeout(() => {
                     window.location.href = 'index.html';
-                }, 2000); // Redirect smoothly after 2 seconds
+                }, 2000);
             } catch (err) {
                 console.error("Failed to submit tool:", err);
                 submitBtn.innerText = 'Failed to submit. Try again.';
@@ -591,6 +766,18 @@
                 opt.value = sub.toLowerCase().replace(/ /g, '-');
                 opt.textContent = sub;
                 subcategorySelect.appendChild(opt);
+            });
+        });
+        // ── Plan Selection Logic ──
+        const planCards = document.querySelectorAll('.plan-card');
+
+        planCards.forEach(card => {
+            card.addEventListener('click', () => {
+                planCards.forEach(c => c.classList.remove('active'));
+                card.classList.add('active');
+
+                // Set the radio button to checked
+                card.querySelector('input').checked = true;
             });
         });
     </script>
