--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script async crossorigin="anonymous"
-        data-clerk-publishable-key="pk_test_YXdha2UtaHllbmEtNzAuY2xlcmsuYWNjb3VudHMuZGV2JA"
+        data-clerk-publishable-key="pk_live_Y2xlcmsuZXZlcnktYWkuY29tJA"
         src="https://cdn.jsdelivr.net/npm/@clerk/clerk-js@latest/dist/clerk.browser.js" type="text/javascript"></script>
     <style>
         .legal-content {
@@ -102,6 +102,7 @@
             }
         }
     </style>
+    <link rel="icon" type="image/png" href="https://res.cloudinary.com/dhar8ajns/image/upload/v1772261620/b6e4b2aa-4284-4a0d-9603-4bae72ffb715_gq7kqd.png">
 </head>
 
 <body id="body">
@@ -113,7 +114,7 @@
     <nav class="navbar scrolled" id="navbar">
         <div class="nav-inner">
             <a href="index.html" class="logo">
-                <span class="logo-icon">⚡</span>
+                <span class="logo-icon"><img src="https://res.cloudinary.com/dhar8ajns/image/upload/v1772261620/b6e4b2aa-4284-4a0d-9603-4bae72ffb715_gq7kqd.png" alt="EveryAI Logo" class="logo-img"></span>
                 <span class="logo-text">Every<span class="logo-accent">AI</span></span>
             </a>
 
@@ -122,7 +123,7 @@
                 <li><a href="about.html" class="nav-link">About</a></li>
                 <li><a href="blogs.html" class="nav-link">Blogs</a></li>
                 <li><a href="prompts.html" class="nav-link">Prompts</a></li>
-                <li><a href="index.html#partnership" class="nav-link">PartnerShip</a></li>
+                <li><a href="index.html#partnership" class="nav-link">Contact Us</a></li>
             </ul>
 
             <div class="nav-actions">
@@ -201,7 +202,7 @@
             <div class="footer-top">
                 <div class="footer-brand">
                     <a href="index.html" class="logo">
-                        <span class="logo-icon">⚡</span>
+                        <span class="logo-icon"><img src="https://res.cloudinary.com/dhar8ajns/image/upload/v1772261620/b6e4b2aa-4284-4a0d-9603-4bae72ffb715_gq7kqd.png" alt="EveryAI Logo" class="logo-img"></span>
                         <span class="logo-text">Every<span class="logo-accent">AI</span></span>
                     </a>
                     <p class="footer-tagline">The ultimate directory of AI-powered tools and apps.</p>
@@ -212,14 +213,16 @@
                     <a href="index.html#apps">All Tools</a>
                     <a href="categories.html">All Categories</a>
                     <a href="submit.html">Submit App</a>
-                    <a href="admin.html">Admin Dashboard</a>
+                    <a href="admin.html" id="admin-dashboard-link" style="display: none;">Admin Dashboard</a>
                 </div>
 
-                <div class="footer-links-group">
+                                <div class="footer-links-group">
                     <h4>Company</h4>
+                    <a href="index.html">Home</a>
                     <a href="about.html">About</a>
-                    <a href="blogs.html">Blog</a>
-                    <a href="#">Contact</a>
+                    <a href="blogs.html">Blogs</a>
+                    <a href="prompts.html">Prompts</a>
+                    <a href="contact.html">Contact Us</a>
                 </div>
 
                 <div class="footer-links-group">
