--- a/tool.html
+++ b/tool.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script async crossorigin="anonymous"
-        data-clerk-publishable-key="pk_test_YXdha2UtaHllbmEtNzAuY2xlcmsuYWNjb3VudHMuZGV2JA"
+        data-clerk-publishable-key="pk_live_Y2xlcmsuZXZlcnktYWkuY29tJA"
         src="https://cdn.jsdelivr.net/npm/@clerk/clerk-js@latest/dist/clerk.browser.js" type="text/javascript"></script>
     <style>
         .tool-page {
@@ -185,16 +185,16 @@
         }
 
         .social-icon-btn {
-            width: 44px;
-            height: 44px;
             display: flex;
             align-items: center;
             justify-content: center;
-            background: var(--bg-card);
-            border: 1px solid var(--border);
-            border-radius: var(--radius-md);
+            background: transparent;
+            border: none;
             color: var(--text-secondary);
             transition: var(--transition);
+            padding: 0;
+            width: auto;
+            height: auto;
         }
 
         .social-icon-btn:hover {
@@ -249,6 +249,8 @@
             }
         }
     </style>
+    <link rel="icon" type="image/png"
+        href="https://res.cloudinary.com/dhar8ajns/image/upload/v1772261620/b6e4b2aa-4284-4a0d-9603-4bae72ffb715_gq7kqd.png">
 </head>
 
 <body id="body">
@@ -260,7 +262,9 @@
     <nav class="navbar" id="navbar">
         <div class="nav-inner">
             <a href="index.html" class="logo" id="logo-link">
-                <span class="logo-icon">⚡</span>
+                <span class="logo-icon"><img
+                        src="https://res.cloudinary.com/dhar8ajns/image/upload/v1772261620/b6e4b2aa-4284-4a0d-9603-4bae72ffb715_gq7kqd.png"
+                        alt="EveryAI Logo" class="logo-img"></span>
                 <span class="logo-text">Every<span class="logo-accent">AI</span></span>
             </a>
 
@@ -269,7 +273,7 @@
                 <li><a href="about.html" class="nav-link">About</a></li>
                 <li><a href="blogs.html" class="nav-link">Blogs</a></li>
                 <li><a href="prompts.html" class="nav-link">Prompts</a></li>
-                <li><a href="#" class="nav-link">PartnerShip</a></li>
+                <li><a href="contact.html" class="nav-link">Contact Us</a></li>
             </ul>
 
             <div class="nav-actions">
@@ -298,7 +302,7 @@
         <a href="about.html" class="mobile-link">About</a>
         <a href="blogs.html" class="mobile-link">Blogs</a>
         <a href="prompts.html" class="mobile-link">Prompts</a>
-        <a href="#" class="mobile-link">PartnerShip</a>
+        <a href="contact.html" class="mobile-link">Contact Us</a>
         <div id="mobile-user-button"></div>
         <button id="mobile-sign-in-btn" class="mobile-link" style="display: none;">Login</button>
         <a href="submit.html" class="btn-primary mobile-cta">Submit Tool</a>
@@ -319,14 +323,21 @@
             <div class="footer-top">
                 <div class="footer-brand">
                     <a href="index.html" class="logo">
-                        <span class="logo-icon">⚡</span>
+                        <span class="logo-icon"><img
+                                src="https://res.cloudinary.com/dhar8ajns/image/upload/v1772261620/b6e4b2aa-4284-4a0d-9603-4bae72ffb715_gq7kqd.png"
+                                alt="EveryAI Logo" class="logo-img"></span>
                         <span class="logo-text">Every<span class="logo-accent">AI</span></span>
                     </a>
                     <p class="footer-tagline">The ultimate directory of AI-powered tools and apps.</p>
                     <div class="footer-socials">
-                        <a href="#" class="social-link" aria-label="Twitter">𝕏</a>
-                        <a href="#" class="social-link" aria-label="LinkedIn">in</a>
-                        <a href="#" class="social-link" aria-label="GitHub">⌥</a>
+                        <a href="https://www.linkedin.com/company/every-ai-com/" target="_blank"
+                            class="social-link linkedin" title="Follow us on LinkedIn">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
+                                fill="currentColor">
+                                <path
+                                    d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
+                            </svg>
+                        </a>
                     </div>
                 </div>
 
